# dau-sim

./: .buildinfo  .copier-answers.yaml  .gitignore  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/csp/: index.doctree
.doctrees/autoapi/csp_autogen/: index.doctree
.doctrees/autoapi/dau_sim/: index.doctree
.doctrees/autoapi/test_api/: index.doctree
.doctrees/autoapi/test_cli/: index.doctree
.doctrees/autoapi/test_cocotb_backend/: index.doctree
.doctrees/autoapi/test_cocotb_examples/: index.doctree
.doctrees/autoapi/test_compiler/: index.doctree
.doctrees/autoapi/test_eval/: index.doctree
.doctrees/autoapi/test_frontend_amaranth/: index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  docs.yaml
_modules/: csp.html  index.html
_modules/csp/: baselib.html  basketlib.html  curve.html  dataframe.html  math.html  profiler.html  random.html  showgraph.html  stats.html  typing.html
_modules/dau_sim/: api.html  cli.html  perf.html  testbench.html
_sources/: README.md.txt  index.md.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/csp/: index.html
autoapi/csp_autogen/: index.html
autoapi/dau_sim/: index.html
autoapi/test_api/: index.html
autoapi/test_cli/: index.html
autoapi/test_cocotb_backend/: index.html
autoapi/test_cocotb_examples/: index.html
autoapi/test_compiler/: index.html
autoapi/test_eval/: index.html
autoapi/test_frontend_amaranth/: index.html
autoapi/test_frontend_sv/: index.html
autoapi/test_ir/: index.html
autoapi/test_nonsynthesizable/: index.html
autoapi/test_perf/: index.html
autoapi/test_selectors/: index.html
autoapi/test_sim_comb/: index.html
autoapi/test_sim_seq/: index.html
autoapi/test_testbench/: index.html
autoapi/test_vcd/: index.html
dau_sim/: __init__.py  api.py  cli.py  perf.py  testbench.py
dau_sim/adapters/: __init__.py  selectors.py  vcd.py
dau_sim/backends/: __init__.py  cocotb_backend.py
dau_sim/benchmarks/: __init__.py  bench_compile_partitioning.py  bench_cross_simulators.py  bench_selective_settle.py  compile_partitioning.py  selective_settle.py
dau_sim/compiler/: __init__.py  codegen.py  compile.py  depanalysis.py  eval.py  eval4.py  flatten.py  resolve.py  rewrite.py
dau_sim/frontends/: __init__.py  amaranth_frontend.py  pyslang_frontend.py
dau_sim/integrations/: __init__.py  cocotb.py  verilator.py  verilator_profiles.py
dau_sim/ir/: __init__.py  expr.py  module.py  printer.py  stmt.py  types.py  validate.py
dau_sim/runtime/: __init__.py
dau_sim/tests/: test_all.py  test_api.py  test_cli.py  test_cocotb_backend.py  test_cocotb_examples.py  test_compiler.py  test_eval.py  test_frontend_amaranth.py  test_frontend_sv.py  test_ir.py  test_nonsynthesizable.py  test_perf.py  test_ready_valid_sum_cocotb.py  test_selectors.py  test_sim_comb.py  test_sim_seq.py  test_testbench.py  test_vcd.py  test_verilator_integration.py  test_verilator_profiles.py
deprecated-1.3.1.dist-info/licenses/: LICENSE.html
docs/src/: amaranth.html  api.html  architecture.html  benchmarks.html  benchmarks.md  cli.html  cli.md  cocotb.html  verilog.html
js/: build.mjs  package.json  pnpm-lock.yaml
numpy/ma/: README.html
numpy/random/: LICENSE.html
(+814 files in other folders)
