[build-system]
requires = [
    "hatchling",
    "hatch-js",
]
build-backend = "hatchling.build"

[project]
name = "dau-sim"
authors = [
    {name = "the dau authors", email = "dev@dau.dev"},
]
description = "dau simulator"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.2.0"
requires-python = ">=3.10"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "amaranth",
    "csp",
    "pyslang",
    "typer",
    "rich",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-dist",
    "codespell",
    "hatch-js",
    "hatchling",
    "mdformat",
    "mdformat-tables>=1",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "ruff",
    "twine",
    "ty",
    "uv",
    "wheel",
    # integrations
    "cocotb",
    "dau-build",
]

[project.scripts]
dau-sim = "dau_sim.cli:main"

[project.urls]
Repository = "https://github.com/dau-dev/dau-sim"
Homepage = "https://github.com/dau-dev/dau-sim"

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "dau_sim/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.codespell]
ignore-words-list = ["inout"]

[tool.coverage.run]
branch = true
omit = [
    "dau_sim/tests/integration/",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
    "dau_sim/extension",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = [
    "dau_sim",
    "js",
]
exclude = [
    "js/dist",
    "js/node_modules",
]

[tool.hatch.build.targets.wheel]
packages = [
    "dau_sim",
]
exclude = [
    "js",
]

[tool.hatch.build.hooks.hatch-js]
path = "js"
build_cmd = "build"
tool = "pnpm"
targets = [
    "dau_sim/extension/cdn/index.js",
]

[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--junitxml=junit.xml",
]
testpaths = "dau_sim/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = [
    "dau_sim",
]
known-third-party = [
    "amaranth",
    "cocotb",
    "csp",
    "dau-build",
    "slang",
    "verilator",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
]

[tool.yardang]
title = "dau sim"
root = "README.md"
pages = [
    "docs/src/architecture.md",
    "docs/src/cli.md",
    "docs/src/api.md",
    "docs/src/amaranth.md",
    "docs/src/verilog.md",
    "docs/src/cocotb.md",
]
use-autoapi = false
